--- a/index.html
+++ b/index.html
@@ -145,7 +145,27 @@
     </div>
     <span class="hamburger" onclick="toggleMenu()">☰</span>
   </nav>
-
+<!-- Hero Image -->
+<section style="
+  width:100%;
+  height:60vh;
+  background:url('https://images.unsplash.com/photo-1503342217505-b0a15ec3261c?auto=format&fit=crop&w=1350&q=80') center/cover no-repeat;
+  position:relative;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  color:#fff;
+  text-align:center;
+  font-size:2rem;
+  font-weight:700;
+  letter-spacing:1px;
+  text-shadow:0 0 10px rgba(0,0,0,.6);
+">
+  <div>
+    <h2 style="margin:0;">Collection Automne 2025</h2>
+    <p style="margin:.5rem 0 0; font-size:1.2rem;">Nouveautés premium, livraison express.</p>
+  </div>
+</section>
   <!-- Hero -->
   <header id="home">
     <h1>Nuklal</h1>
