--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lang="fr">
+    <!-- Favicon haute résolution -->
+  <link rel="icon" href="favicon.png" type="image/png">
+  <link rel="apple-touch-icon" href="favicon.png">
+</head>
 <head>
   <meta charset="UTF-8">
   <title>Nuklal – nous méritons le meilleur</title>
