--- a/index.html
+++ b/index.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <!-- Favicon haute résolution -->
-  <link rel="icon" href="favicon.png" type="image/png">
-  <link rel="apple-touch-icon" href="favicon.png">
-</head>
 <head>
   <meta charset="UTF-8">
   <title>Nuklal – nous méritons le meilleur</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Mode & accessoires premium – livraison Suisse & monde.">
-  <link rel="icon" href="https://i.imgur.com/X8jQh7b.png">
+  <link rel="icon" href="favicon.png" type="image/png">
+  <link rel="apple-touch-icon" href="favicon.png">
   <style>
     :root {
       --black:#111;
       --gold:#d4af37;
       --gray:#222;
-      --light:#f5f5f5;
       --radius:10px;
     }
     *{box-sizing:border-box;margin:0;padding:0}
@@ -25,7 +21,6 @@
       color:#fff;
       line-height:1.6;
     }
-    /* === NAVBAR === */
     nav{
       background:var(--gold);
       display:flex;
@@ -45,7 +40,6 @@
       .nav-links a{padding:.8rem;border-top:1px solid #000}
       .hamburger{display:block}
     }
-    /* === HEADER === */
     header{
       background:linear-gradient(135deg,var(--gold) 0%,#f7e98e 100%);
       padding:4rem 1rem;
@@ -53,10 +47,8 @@
     }
     header h1{font-size:3rem;color:var(--black);letter-spacing:.5px}
     header p{font-size:1.3rem;color:var(--black);opacity:.9;margin-top:.5rem}
-    /* === SECTIONS === */
     section{padding:2rem 1rem;max-width:1200px;margin:auto}
     h2{color:var(--gold);margin-bottom:1rem}
-    /* === FILTRES === */
     .filters{
       display:flex;
       flex-wrap:wrap;
@@ -68,19 +60,8 @@
       padding:1rem;
       border-radius:var(--radius);
     }
-    .filters label{
-      font-size:.9rem;
-      display:flex;
-      flex-direction:column;
-      gap:.2rem;
-    }
-    .filters select,.filters input{
-      padding:.4rem .6rem;
-      border-radius:var(--radius);
-      border:none;
-      font-size:.9rem;
-    }
-    /* === GRILLE PRODUITS === */
+    .filters label{font-size:.9rem;display:flex;flex-direction:column;gap:.2rem}
+    .filters select,.filters input{padding:.4rem .6rem;border-radius:var(--radius);border:none;font-size:.9rem}
     .products{
       display:grid;
       gap:2rem;
@@ -96,11 +77,7 @@
       transition:transform .3s;
     }
     .card:hover{transform:translateY(-4px)}
-    .card img{
-      width:100%;
-      border-radius:var(--radius);
-      margin-bottom:.5rem;
-    }
+    .card img{width:100%;border-radius:var(--radius);margin-bottom:.5rem}
     .card h2{font-size:1.1rem;margin:.5rem 0}
     .price{font-size:1.2rem;color:var(--gold);margin-bottom:.8rem}
     button{
@@ -114,7 +91,6 @@
       transition:background .3s;
     }
     button:hover{background:#fff;color:var(--black)}
-    /* === FOOTER === */
     footer{
       background:#000;
       color:#fff;
@@ -133,38 +109,24 @@
     footer a{color:#fff;text-decoration:none}
     footer a:hover{color:var(--gold)}
     .footer-bottom{text-align:center;margin-top:1.5rem;font-size:.8rem}
+    #toast{
+      position:fixed;
+      bottom:20px;left:50%;
+      transform:translateX(-50%) translateY(100px);
+      background:#d4af37;
+      color:#111;
+      padding:.6rem 1.2rem;
+      border-radius:6px;
+      font-size:.9rem;
+      font-weight:600;
+      opacity:0;
+      transition:transform .3s, opacity .3s;
+      z-index:9999;
+    }
+    #toast.show{transform:translateX(-50%) translateY(0);opacity:1}
   </style>
 </head>
-  <style>
-  #toast{
-    position:fixed;
-    bottom:20px;left:50%;
-    transform:translateX(-50%) translateY(100px);
-    background:#d4af37;
-    color:#111;
-    padding:.6rem 1.2rem;
-    border-radius:6px;
-    font-size:.9rem;
-    font-weight:600;
-    opacity:0;
-    transition:transform .3s, opacity .3s;
-    z-index:9999;
-  }
-  #toast.show{transform:translateX(-50%) translateY(0);opacity:1}
-</style>
-<script>
-  document.addEventListener('click', e=>{
-    if(e.target.classList.contains('snipcart-add-item')){
-      const toast = document.getElementById('toast') || (()=>{
-        const t=document.createElement('div');t.id='toast';t.textContent='Ajouté au panier ✔';document.body.appendChild(t);return t;
-      })();
-      toast.classList.add('show');
-      setTimeout(()=>toast.classList.remove('show'),2500);
-    }
-  });
-</script>
 <body>
-
   <!-- Navbar -->
   <nav>
     <a href="#" class="brand">Nuklal</a>
@@ -177,28 +139,29 @@
     </div>
     <span class="hamburger" onclick="toggleMenu()">☰</span>
   </nav>
-<!-- Hero Image -->
-<section style="
-  width:100%;
-  height:60vh;
-  background:url('https://images.unsplash.com/photo-1503342217505-b0a15ec3261c?auto=format&fit=crop&w=1350&q=80') center/cover no-repeat;
-  position:relative;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  color:#fff;
-  text-align:center;
-  font-size:2rem;
-  font-weight:700;
-  letter-spacing:1px;
-  text-shadow:0 0 10px rgba(0,0,0,.6);
-">
-  <div>
-    <h2 style="margin:0;">Collection Automne 2025</h2>
-    <p style="margin:.5rem 0 0; font-size:1.2rem;">Nouveautés premium, livraison express.</p>
-  </div>
-</section>
-  <!-- Hero -->
+
+  <!-- Hero Image -->
+  <section style="
+    width:100%;
+    height:60vh;
+    background:url('https://images.unsplash.com/photo-1503342217505-b0a15ec3261c?auto=format&fit=crop&w=1350&q=80') center/cover no-repeat;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    color:#fff;
+    text-align:center;
+    font-size:2rem;
+    font-weight:700;
+    letter-spacing:1px;
+    text-shadow:0 0 10px rgba(0,0,0,.6);
+  ">
+    <div>
+      <h2 style="margin:0;">Collection Automne 2025</h2>
+      <p style="margin:.5rem 0 0; font-size:1.2rem;">Nouveautés premium, livraison express.</p>
+    </div>
+  </section>
+
+  <!-- Header -->
   <header id="home">
     <h1>Nuklal</h1>
     <p>nous méritons le meilleur</p>
@@ -215,12 +178,10 @@
         <option value="accessoire">Accessoire</option>
       </select>
     </label>
-
     <label>Prix max
       <input type="range" id="priceRange" min="0" max="100" value="100">
       <span id="priceValue">100 CHF</span>
     </label>
-
     <label>Couleur
       <select id="filterColor">
         <option value="all">Toutes</option>
@@ -229,7 +190,6 @@
         <option value="or">Or</option>
       </select>
     </label>
-
     <label>Taille
       <select id="filterSize">
         <option value="all">Toutes</option>
@@ -303,21 +263,23 @@
               data-item-url="https://nuklal.com">Acheter</button>
     </div>
   </section>
-<!-- Badges confiance -->
-<section style="padding:2rem 1rem;display:flex;gap:1.5rem;flex-wrap:wrap;justify-content:center;font-size:.9rem;text-align:center">
-  <div style="display:flex;align-items:center;gap:.5rem;color:var(--gold)">
-    <svg width="20" height="20" fill="currentColor"><path d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 15l-4-4 1.41-1.41L10 12.17l6.59-6.59L18 7l-8 8z"/></svg>
-    Livraison gratuite dès 100 CHF
-  </div>
-  <div style="display:flex;align-items:center;gap:.5rem;color:var(--gold)">
-    <svg width="20" height="20" fill="currentColor"><path d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 15l-4-4 1.41-1.41L10 12.17l6.59-6.59L18 7l-8 8z"/></svg>
-    Paiement sécurisé SSL
-  </div>
-  <div style="display:flex;align-items:center;gap:.5rem;color:var(--gold)">
-    <svg width="20" height="20" fill="currentColor"><path d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 15l-4-4 1.41-1.41L10 12.17l6.59-6.59L18 7l-8 8z"/></svg>
-    Retours gratuits 30 jours
-  </div>
-</section>
+
+  <!-- Badges confiance -->
+  <section style="padding:2rem 1rem;display:flex;gap:1.5rem;flex-wrap:wrap;justify-content:center;font-size:.9rem;text-align:center">
+    <div style="display:flex;align-items:center;gap:.5rem;color:var(--gold)">
+      <svg width="20" height="20" fill="currentColor"><path d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 15l-4-4 1.41-1.41L10 12.17l6.59-6.59L18 7l-8 8z"/></svg>
+      Livraison gratuite dès 100 CHF
+    </div>
+    <div style="display:flex;align-items:center;gap:.5rem;color:var(--gold)">
+      <svg width="20" height="20" fill="currentColor"><path d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 15l-4-4 1.41-1.41L10 12.17l6.59-6.59L18 7l-8 8z"/></svg>
+      Paiement sécurisé SSL
+    </div>
+    <div style="display:flex;align-items:center;gap:.5rem;color:var(--gold)">
+      <svg width="20" height="20" fill="currentColor"><path d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 15l-4-4 1.41-1.41L10 12.17l6.59-6.59L18 7l-8 8z"/></svg>
+      Retours gratuits 30 jours
+    </div>
+  </section>
+
   <!-- À propos -->
   <section id="about">
     <h2>À propos</h2>
@@ -361,24 +323,18 @@
         </ul>
       </div>
       <div>
-        <!-- Footer : réseaux sociaux + badges -->
-<div>
-  <h3>Suivez-nous</h3>
-  <div style="display:flex;gap:.8rem;margin-top:.5rem">
-    <!-- Instagram -->
-    <a href="https://instagram.com/nuklal" target="_blank" aria-label="Instagram">
-      <svg width="24" height="24" fill="#fff"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 1.264.058 2.148.243 2.91.564.77.32 1.374.927 1.696 1.696.32.762.506 1.646.564 2.91.058 1.266.07 1.646.07 4.85s-.012 3.584-.07 4.85c-.058 1.264-.244 2.148-.564 2.91-.322.77-.927 1.374-1.696 1.696-.762.32-1.646.506-2.91.564-1.266.058-1.646.07-4.85.07s-3.584-.012-4.85-.07c-1.264-.058-2.148-.244-2.91-.564-.77-.322-1.374-.927-1.696-1.696-.32-.762-.506-1.646-.564-2.91-.058-1.266-.07-1.646-.07-4.85s.012-3.584.07-4.85c.058-1.264.243-2.148.564-2.91.32-.77.927-1.374 1.696-1.696.762-.32 1.646-.506 2.91-.564C8.416 2.175 8.796 2.163 12 2.163zm0 1.623c-3.14 0-3.5.013-4.73.07-1.107.05-1.707.228-2.108.393-.532.217-.91.595-1.128 1.128-.165.4-.344 1-.393 2.108-.057 1.23-.07 1.59-.07 4.73s.013 3.5.07 4.73c.05 1.107.228 1.707.393 2.108.217.532.595.91 1.128 1.128.4.165 1 .344 2.108.393 1.23.057 1.59.07 4.73.07s3.5-.013 4.73-.07c1.107-.05 1.707-.228 2.108-.393.532-.217.91-.595 1.128-1.128.165-.4.344-1 .393-2.108.057-1.23.07-1.59.07-4.73s-.013-3.5-.07-4.73c-.05-1.107-.228-1.707-.393-2.108-.217-.532-.595-.91-1.128-1.128-.4-.165-1-.344-2.108-.393-1.23-.057-1.59-.07-4.73-.07zm0 3.297c-2.574 0-4.665 2.09-4.665 4.665s2.09 4.665 4.665 4.665 4.665-2.09 4.665-4.665-2.09-4.665-4.665-4.665zm0 7.73c-1.693 0-3.065-1.372-3.065-3.065s1.372-3.065 3.065-3.065 3.065 1.372 3.065 3.065-1.372 3.065-3.065 3.065zm6.406-7.845c0 .6-.485 1.085-1.085 1.085s-1.085-.485-1.085-1.085.485-1.085 1.085-1.085 1.085.485 1.085 1.085z"/></svg>
-    </a>
-    <!-- TikTok -->
-    <a href="https://tiktok.com/@nuklal" target="_blank" aria-label="TikTok">
-      <svg width="24" height="24" fill="#fff"><path d="M19 0h-5.5c.7 1.2 1.1 2.6 1.1 4.1v4.1h4.1v4.1h-4.1v8.2c0 1.4-.3 2.7-.8 3.9-.5 1.2-1.2 2.2-2.1 3-.9.8-2 1.4-3.2 1.8-1.2.4-2.5.6-3.9.6-1.4 0-2.7-.2-3.9-.6-1.2-.4-2.3-1-3.2-1.8-.9-.8-1.6-1.8-2.1-3-.5-1.2-.8-2.5-.8-3.9V8.2H0V4.1h4.1V0h4.1v4.1c0-1.5.4-2.9 1.1-4.1H19z"/></svg>
-    </a>
-    <!-- Pinterest -->
-    <a href="https://pinterest.com/nuklal" target="_blank" aria-label="Pinterest">
-      <svg width="24" height="24" fill="#fff"><path d="M12 0C5.373 0 0 5.373 0 12c0 5.083 3.163 9.426 7.627 11.174-.105-.949-.199-2.403.041-3.439.219-.937 1.406-5.957 1.406-5.957s-.359-.719-.359-1.781c0-1.663.967-2.911 2.168-2.911 1.024 0 1.518.769 1.518 1.688 0 1.029-.653 2.567-.992 3.992-.285 1.193.6 2.165 1.775 2.165 2.128 0 3.768-2.245 3.768-5.487 0-2.861-2.063-4.869-5.008-4.869-3.41 0-5.409 2.562-5.409 5.199 0 1.033.394 2.143.889 2.741.099.12.112.225.085.347-.09.375-.293 1.199-.334 1.363-.053.225-.172.271-.402.165-1.495-.695-2.433-2.878-2.433-4.646 0-3.776 2.748-7.252 7.92-7.252 4.158 0 7.392 2.967 7.392 6.923 0 4.135-2.607 7.462-6.233 7.462-1.214 0-2.357-.629-2.744-1.378l-.748 2.853c-.271 1.043-1.002 2.35-1.492 3.146C9.57 23.812 10.763 24 12 24c6.627 0 12-5.373 12-12S18.627 0 12 0z"/></svg>
-    </a>
-  </div>
-</div>
+        <h3>Suivez-nous</h3>
+        <div style="display:flex;gap:.8rem;margin-top:.5rem">
+          <a href="https://instagram.com/nuklal" target="_blank" aria-label="Instagram">
+            <svg width="24" height="24" fill="#fff"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 1.264.058 2.148.243 2.91.564.77.32 1.374.927 1.696 1.696.32.762.506 1.646.564 2.91.058 1.266.07 1.646.07 4.85s-.012 3.584-.07 4.85c-.058 1.264-.244 2.148-.564 2.91-.322.77-.927 1.374-1.696 1.696-.762.32-1.646.506-2.91.564-1.266.058-1.646.07-4.85.07s-3.584-.012-4.85-.07c-1.264-.058-2.148-.244-2.91-.564-.77-.322-1.374-.927-1.696-1.696-.32-.762-.506-1.646-.564-2.91-.058-1.266-.07-1.646-.07-4.85s.012-3.584.07-4.85c.058-1.264.243-2.148.564-2.91.32-.77.927-1.374 1.696-1.696.762-.32 1.646-.506 2.91-.564C8.416 2.175 8.796 2.163 12 2.163zm0 1.623c-3.14 0-3.5.013-4.73.07-1.107.05-1.707.228-2.108.393-.532.217-.91.595-1.128 1.128-.165.4-.344 1-.393 2.108-.057 1.23-.07 1.59-.07 4.73s.013 3.5.07 4.73c.05 1.107.228 1.707.393 2.108.217.532.595.91 1.128 1.128.4.165 1 .344 2.108.393 1.23.057 1.59.07 4.73.07s3.5-.013 4.73-.07c1.107-.05 1.707-.228 2.108-.393.532-.217.91-.595 1.128-1.128.165-.4.344-1 .393-2.108.057-1.23.07-1.59.07-4.73s-.013-3.5-.07-4.73c-.05-1.107-.228-1.707-.393-2.108-.217-.532-.595-.91-1.128-1.128-.4-.165-1-.344-2.108-.393-1.23-.057-1.59-.07-4.73-.07zm0 3.297c-2.574 0-4.665 2.09-4.665 4.665s2.09 4.665 4.665 4.665 4.665-2.09 4.665-4.665-2.09-4.665-4.665-4.665zm0 7.73c-1.693 0-3.065-1.372-3.065-3.065s1.372-3.065 3.065-3.065 3.065 1.372 3.065 3.065-1.372 3.065-3.065 3.065zm6.406-7.845c0 .6-.485 1.085-1.085 1.085s-1.085-.485-1.085-1.085.485-1.085 1.085-1.085 1.085.485 1.085 1.085z"/></svg>
+          </a>
+          <a href="https://tiktok.com/@nuklal" target="_blank" aria-label="TikTok">
+            <svg width="24" height="24" fill="#fff"><path d="M19 0h-5.5c.7 1.2 1.1 2.6 1.1 4.1v4.1h4.1v4.1h-4.1v8.2c0 1.4-.3 2.7-.8 3.9-.5 1.2-1.2 2.2-2.1 3-.9.8-2 1.4-3.2 1.8-1.2.4-2.5.6-3.9.6-1.4 0-2.7-.2-3.9-.6-1.2-.4-2.3-1-3.2-1.8-.9-.8-1.6-1.8-2.1-3-.5-1.2-.8-2.5-.8-3.9V8.2H0V4.1h4.1V0h4.1v4.1c0-1.5.4-2.9 1.1-4.1H19z"/></svg>
+          </a>
+          <a href="https://pinterest.com/nuklal" target="_blank" aria-label="Pinterest">
+            <svg width="24" height="24" fill="#fff"><path d="M12 0C5.373 0 0 5.373 0 12c0 5.083 3.163 9.426 7.627 11.174-.105-.949-.199-2.403.041-3.439.219-.937 1.406-5.957 1.406-5.957s-.359-.719-.359-1.781c0-1.663.967-2.911 2.168-2.911 1.024 0 1.518.769 1.518 1.688 0 1.029-.653 2.567-.992 3.992-.285 1.193.6 2.165 1.775 2.165 2.128 0 3.768-2.245 3.768-5.487 0-2.861-2.063-4.869-5.008-4.869-3.41 0-5.409 2.562-5.409 5.199 0 1.033.394 2.143.889 2.741.099.12.112.225.085.347-.09.375-.293 1.199-.334 1.363-.053.225-.172.271-.402.165-1.495-.695-2.433-2.878-2.433-4.646 0-3.776 2.748-7.252 7.92-7.252 4.158 0 7.392 2.967 7.392 6.923 0 4.135-2.607 7.462-6.233 7.462-1.214 0-2.357-.629-2.744-1.378l-.748 2.853c-.271 1.043-1.002 2.35-1.492 3.146C9.57 23.812 10.763 24 12 24c6.627 0 12-5.373 12-12S18.627 0 12 0z"/></svg>
+          </a>
+        </div>
       </div>
     </div>
     <div class="footer-bottom">
@@ -393,14 +349,13 @@
        data-currency="chf"
        data-locale="fr"></div>
 
-  <!-- JS menu mobile + filtres -->
+  <!-- JS menu mobile + filtres + toast -->
   <script>
     function toggleMenu() {
       const nav = document.getElementById('navLinks');
       nav.style.display = nav.style.display === 'flex' ? 'none' : 'flex';
     }
 
-    /* --- Filtres --- */
     const cards = [...document.querySelectorAll('.card')];
     const filterCategory = document.getElementById('filterCategory');
     const priceRange = document.getElementById('priceRange');
@@ -413,7 +368,6 @@
       const maxPrice = parseInt(priceRange.value);
       const color = filterColor.value;
       const size = filterSize.value;
-
       priceValue.textContent = maxPrice + ' CHF';
 
       cards.forEach(card => {
@@ -421,19 +375,27 @@
         const price = parseInt(card.dataset.price);
         const col = card.dataset.color;
         const sz = card.dataset.size;
-
         const matchCat = category === 'all' || cat === category;
         const matchPrice = price <= maxPrice;
         const matchColor = color === 'all' || col.includes(color);
         const matchSize = size === 'all' || sz.includes(size);
-
         card.style.display = (matchCat && matchPrice && matchColor && matchSize) ? 'flex' : 'none';
       });
     }
-
     [filterCategory, priceRange, filterColor, filterSize].forEach(el =>
       el.addEventListener('input', filterProducts)
     );
+
+    /* Toast "Ajouté au panier" */
+    document.addEventListener('click', e=>{
+      if(e.target.classList.contains('snipcart-add-item')){
+        const toast = document.getElementById('toast') || (()=>{
+          const t=document.createElement('div');t.id='toast';t.textContent='Ajouté au panier ✔';document.body.appendChild(t);return t;
+        })();
+        toast.classList.add('show');
+        setTimeout(()=>toast.classList.remove('show'),2500);
+      }
+    });
   </script>
 </body>
 </html>
