--- a/index.html
+++ b/index.html
@@ -137,6 +137,8 @@
       <a href="#contact">Contact</a>
       <a href="cgv.html">CGV</a>
     </div>
+    <!-- Toggle mode sombre/clair -->
+<button id="themeToggle" style="background:none;border:none;color:var(--black);font-size:1.4rem;cursor:pointer" title="Mode sombre/clair">🌙</button>
     <span class="hamburger" onclick="toggleMenu()">☰</span>
   </nav>
 
