--- a/index.html
+++ b/index.html
@@ -170,6 +170,12 @@
   </nav>
 
   <!-- Hero Image -->
+  .hero-parallax {
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
+}
+  
   <section style="
     width:100%;
     height:60vh;
