--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
   background-size: cover;
   background-position: center;
 }
-  
+  <section class="hero-parallax" style="height:60vh; background:url('https://images.unsplash.com/photo-1503342217505-b0a15ec3261c?auto=format&fit=crop&w=1350&q=80') center/cover no-repeat;">
   <section style="
     width:100%;
     height:60vh;
